--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">FilmRepositoryApp</string>
+    <string name="add_record">Добавить запись</string>
+    <string name="edit_record">Редактировать запись</string>
+    <string name="action_exit">Выход</string>
 </resources>
