commit#9 Переход на support v4 android lib Build successfull Экран для генерации данных для заполнения БД (добавления редактирования БД)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="add_record">Добавить запись</string>
     <string name="edit_record">Редактировать запись</string>
     <string name="action_exit">Выход</string>
+    <string name="films">Список фильмов</string>
 </resources>
