Another yet Multipie Errors corrected Many errors still needs to be corrected New branch called Realm_with_Toothpick

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,29 @@
     <string name="edit_film">Редактировать фильм</string>
     <string name="image">Image URL</string>
     <string name="searchByName">Поиск по названию</string>
+
+     <string name="name_search_title">Поиск по названию</string>
+    <string name="director_search_title">Поиск по имени режисера</string>
+    <string name="main_activity_title">Фильмы</string>
+    <string name="year_search_title">Поиск по году выпуска</string>
+    <string name="top_search_title">Список по рейтингу</string>
+    <string name="director_search_hint">Режиссер (мин. 4 символа)</string>
+    <string name="name_search_hint">Название (мин. 3 символа)</string>
+    <string name="top_search_hint">Количество фильмов</string>
+    <string name="year_search_hint">2000 или 2000-2020 или -2020</string>
+    <string name="mi_generate">Заполнить базу</string>
+    <string name="mi_add">Добавить фильм</string>
+    <string name="mi_search_by_name">Поиск по наименованию</string>
+    <string name="mi_search_by_year">Поиск по году</string>
+    <string name="mi_search_by_director">Поиск по режиссеру</string>
+    <string name="mi_search_by_top">Топ фильмов по рейтингу</string>
+    <string name="delete_message">Удаляем фильм?</string>
+    <string name="no_label">нет</string>
+    <string name="yes_label">да</string>
+     <string name="list_empty">Список пуст</string>
+    <string name="dialog_title_new_film">Добавить фильм</string>
+    <string name="dialog_title_edit_film">Редактировать фильм</string>
+    <string name="btn_save_label">Сохранить</string>
+    <string name="btn_cancel_label">Отмена</string>
+
 </resources>
